<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="regUser">Зарегестрироваться</string>
    <string name="logOut">Выйти</string>
    <string name="addServices">Добавить услугу</string>
    <string name="findServices">Найти услугу</string>
    <string name="profile">Профиль</string>

    //registration
    <string name="nameRegistration">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="cityRegistration">Город</string>
    <string name="phoneRegistration">Номер телефона</string>
    <string name="passwordRegistration">Пароль</string>
    <string name="logInRegistration">Войти</string>

    //Add service
    <string name="nameAddServiceTB">Имя</string>
    <string name="costAddServiceTB">Цена</string>
    <string name="main_screen">Главная страница</string>
    <string name="phone">Телефон</string>

    //Edit service
    <string name="save">Сохранить</string>

    //Edit profile

    //tag id
    <string name="selectedId">selectedId</string>
    <string name="yearId">yearId</string>

    <string name="BunBeauty">BunBeauty</string>
    <string name="hello_blank_fragment">hello blank fragment</string>
    <string name="status_worker">worker</string>
    <string name="empty_field">Не все поля заполнены</string>
    <string name="default_value">-</string>
    <string name="empty_phone_field">Поле с номером телефона не может быть пустым</string>
    <string name="resendCode">Отправить код снова</string>
    <string name="verifyCode">Подтвердить код</string>
    <string name="enterCode">Введите код</string>
    <string name="canceled">Отказаться</string>
    <string name="Dialogs">Диалоги</string>
    <string name="rate">Оценить</string>
    <string name="deleteService">Удалить</string>
    <string name="channel_name">q</string>
    <string name="channel_description">qq</string>

    //bottom panel
    <string name="chat">\uf075</string>
    <string name="user">\uf007</string>
    <string name="mainScreen">\uf03a</string>
    <string name="search">\uf002</string>
    <string name="back">\uf104</string>
    <string name="settings">\uf303</string>
    <string name="subscribe_heart">\uf004</string>
    <string name="premium">\uf091</string>

    //array for spinner
    <string-array name="cities">
        <item><b>не выбран</b></item>
        <item><b>dubna</b></item>
        <item><b>dmitrov</b></item>
        <item><b>taldom</b></item>
        <item><b>kimry</b></item>
    </string-array>

    <string-array name="searchBy">
        <item><b>название сервиса</b></item>
        <item><b>имя и фамилия</b></item>
    </string-array>

    <string-array name="category">
        <item><font android:color="@color/white">Выбрать категорию</font></item>
        <item><b><font android:color="@color/white">Ногти</font></b></item>
        <item><b><font android:color="@color/white">Волосы </font></b></item>
        <item><b><font android:color="@color/white">Глаза</font></b></item>
        <item><b><font android:color="@color/white">Визаж</font></b></item>
        <item><b><font android:color="@color/white">Массаж</font></b></item>
    </string-array>

    <string-array name="categoryForEditService">
        <item><b><font android:color="@color/white">Ногти</font></b></item>
        <item><b><font android:color="@color/white">Волосы</font></b></item>
        <item><b><font android:color="@color/white">Глаза</font></b></item>
        <item><b><font android:color="@color/white">Визаж</font></b></item>
        <item><b><font android:color="@color/white">Массаж</font></b></item>
    </string-array>

    <string-array name="countryCode">
        <item><b><font android:color="@color/white">+7</font></b></item>
        <item><b><font android:color="@color/white">+1</font></b></item>
    </string-array>

    <string-array name="countryCodeForEditService">
        <item><b><font android:color="@color/black">+7</font></b></item>
        <item><b><font android:color="@color/black">+1</font></b></item>
    </string-array>

    <string name="title_activity_picked_comment">PickedComment</string>
    <string name="saveData">Сохранить данные</string>
    <string name="subscribed"><![CDATA[<B]]></string>
    <string name="name">Name</string>
    <string name="change_number"><u>Именить номер</u></string>

</resources>
