<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".createService.AddService"
    android:theme="@style/allPages">

    <EditText
        android:id="@+id/nameEditProfileInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/nameAddServiceTB"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/cityEditProfileInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/cityRegistration"/>

    <EditText
        android:id="@+id/phoneEditProfileInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/editProfileEditProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="5dp"
        android:text="@string/edit" />

    <EditText
        android:id="@+id/codeEditProfileInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:visibility="invisible"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/enterCode"
        android:inputType="number" />
    <Button
        android:id="@+id/verifyProfileEditProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="5dp"
        android:text="@string/verifyCode" />
    <Button
        android:id="@+id/resendProfileEditProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="5dp"
        android:text="@string/resendCode" />

</LinearLayout>