<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".logIn.Registration">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/bun_beauty" />

    <EditText
        android:id="@+id/phoneRegistrationInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/lightText"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/phoneRegistration"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/lightText" />

    <EditText
        android:id="@+id/nameRegistrationInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/lightText"
        android:ems="10"
        android:hint="@string/nameRegistration"
        android:inputType="textCapWords"
        android:textColor="@color/white"
        android:textColorHint="@color/lightText" />

    <EditText
        android:id="@+id/surnameRegistrationInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/lightText"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName|textCapWords"
        android:textColor="@color/white"
        android:textColorHint="@color/lightText" />

    <EditText
        android:id="@+id/cityRegistrationInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/lightText"
        android:ems="10"
        android:hint="@string/cityRegistration"
        android:inputType="textPersonName|textCapWords"
        android:textColor="@color/white"
        android:textColorHint="@color/lightText" />

    <Button
        android:id="@+id/saveDataRegistrationBtn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn"
        android:text="@string/saveData"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold" />


</LinearLayout>