<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".createService.AddService"
    android:theme="@style/allPages">

    <EditText
        android:id="@+id/nameAddServiceInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="24dp"
        android:inputType="textPersonName|textCapWords"
        android:ems="10"
        android:hint="@string/nameAddServiceTB"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/costAddServiceInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/costAddServiceTB"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/descriptionAddServiceInput"
        android:inputType="textMultiLine"
        android:layout_width="312dp"
        android:layout_height="233dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="17dp"
        android:layout_gravity="center"
        android:ems="10" />

    <Button
        android:id="@+id/addServiceAddServiceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:text="@string/addServices" />

</LinearLayout>