<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".logIn.PasswordRecovery">

    <Spinner
        android:id="@+id/codeRecoverySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/phoneRecoveryInput"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/phoneRecoveryInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightText"
        android:ems="10"
        android:hint="@string/phoneRegistration"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/lightText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/sendCodeRecoveryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Отпрвить код"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/codeRecoveryInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightText"
        android:ems="10"
        android:hint="@string/enterCode"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/lightText"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendCodeRecoveryBtn"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/verifyRecoveryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifyCode"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendCodeRecoveryBtn" />

    <Button
        android:id="@+id/resendRecoveryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resendCode"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendCodeRecoveryBtn"
        app:layout_constraintVertical_bias="0.7" />


</android.support.constraint.ConstraintLayout>