<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/logInPages"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.logIn.AuthorizationActivity">


    <LinearLayout
        style="@style/logInPages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/verifyAuthorizationBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.logIn.VerifyPhoneActivity"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/logoVerifyImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            app:srcCompat="@drawable/bun_beauty" />

        <EditText
            android:id="@+id/codeVerifyInput"
            style="@style/loginPackageInput"
            android:layout_gravity="center"
            android:hint="@string/enterCode"
            android:inputType="number" />

        <LinearLayout
            style="@style/loginPackageLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp">

            <TextView
                android:id="@+id/alertCodeVerifyText"
                style="@style/extraText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:text="На указанный номер,\n был отправлен код подтверждения" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loadingAuthorizationProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/titleAuthorizationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/resendCode"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/changePhoneVerifyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/change_number"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/verifyAuthorizationBtn"
        style="@style/mainButtonLogIn"
        android:text="Войти"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
